--- a/server/release.json
+++ b/server/release.json
@@ -1,5 +1,18 @@
 [ {
-"url":"https://m.media-amazon.com/images/M/MV5BMzU3OTI0MDA1Ml5BMl5BanBnXkFtZTYwNzA1NzU3._V1_.jpg",
+"url":"https://unel-app.github.io/api.unel.tv/web-server/image/Chainsaw-Man.png",
+"title":"Шынжырлы Ара Адам",
+"grade":"7 из 12 эп • 8,6★",
+"info":"Дэнжи тек қарапайым адамдар секілді өмір сүргісі келді, бірақ әкесінен қалған қарыздарын өтеу үшін ол заңсыз жын аулауға мәжбүр болып, бір күні қайтыс болды. Оның ерекше үй жануары Почита қандай да бір жолмен оның өлі денесімен біріктірілді, енді жігіт аяқ-қолдарын шынжырлы араға айналдыра алады. Мұндай құнды жаратылысты Қоғамдық қауіпсіздік бюросы қайтадан жындарды аулау үшін өз қолына алады - бұл жолы ресми түрде.",
+"jp":"チェンソーマン, Chainsaw Man",
+"country":"Япония, 11 қазан 2022ж",
+"info1":"7 из 12 эп. ~25мин",
+"info2":"Көп бөлімді, әр сейсенбі сайын шығады",
+"info3":"Студия MAPPA, автор Тацуки Фудзимото",
+"description":"Экшен, демоны, хоррор, сёнен",
+"note":"Ескертулер жоқ!😊",
+"id":"https://unel-app.github.io/api.unel.tv/server/episode/chainsaw-man.json"
+},
+{"url":"https://m.media-amazon.com/images/M/MV5BMzU3OTI0MDA1Ml5BMl5BanBnXkFtZTYwNzA1NzU3._V1_.jpg",
 "title":"Жаңа полиция хикаясы",
 "jp":"New police story",
 "grade":"1 эп. • 7,4★",
@@ -50,19 +63,6 @@
 "description":"Фэнтези, комедия, драма",
 "note":"Ескертулер жоқ!😊",
 "id":"https://unel-app.github.io/api.unel.tv/server/episode/bruce-almighty.json"
-},
-{"url":"https://unel-app.github.io/api.unel.tv/web-server/image/Chainsaw-Man.png",
-"title":"Шынжырлы Ара Адам",
-"grade":"6 из 12 эп • 8,6★",
-"info":"Дэнжи тек қарапайым адамдар секілді өмір сүргісі келді, бірақ әкесінен қалған қарыздарын өтеу үшін ол заңсыз жын аулауға мәжбүр болып, бір күні қайтыс болды. Оның ерекше үй жануары Почита қандай да бір жолмен оның өлі денесімен біріктірілді, енді жігіт аяқ-қолдарын шынжырлы араға айналдыра алады. Мұндай құнды жаратылысты Қоғамдық қауіпсіздік бюросы қайтадан жындарды аулау үшін өз қолына алады - бұл жолы ресми түрде.",
-"jp":"チェンソーマン, Chainsaw Man",
-"country":"Япония, 11 қазан 2022ж",
-"info1":"6 из 12 эп. ~25мин",
-"info2":"Көп бөлімді, әр сейсенбі сайын шығады",
-"info3":"Студия MAPPA, автор Тацуки Фудзимото",
-"description":"Экшен, демоны, хоррор, сёнен",
-"note":"Ескертулер жоқ!😊",
-"id":"https://unel-app.github.io/api.unel.tv/server/episode/chainsaw-man.json"
 },
 {"url":"https://i.pinimg.com/originals/e8/59/f4/e859f43c30a207270f5539014358f5cb.jpg",
 "title":"Хаулдың Жаяу Қамалы",
