--- a/server/release.json
+++ b/server/release.json
@@ -250,6 +250,6 @@
 "is":"https://sites.google.com/view/unel-app/kimi-no-na-wa-list",
 "description":"Романтика, мектеп, тылсым дүние",
 "note":"Ескертулер жоқ!😊",
-"age":"16+"
+"age":"16+",
 "id":"https://unel-app.github.io/api.unel.tv/server/episode/kimi-no-na-wa.json"
 } ]
