--- a/server/release.json
+++ b/server/release.json
@@ -11,7 +11,7 @@
 "description":"Экшен, демоны, хоррор, сёнен",
 "note":"Ескертулер жоқ!😊",
 "age":"18+",
-"id":"https://unel-app.github.io/api.unel.tv/server/episode/chainsaw-man.json"
+"id":"chainsaw-man"
 },
 {"url":"https://m.media-amazon.com/images/M/MV5BMzU3OTI0MDA1Ml5BMl5BanBnXkFtZTYwNzA1NzU3._V1_.jpg",
 "title":"Жаңа полиция хикаясы",
