--- a/server/release.json
+++ b/server/release.json
@@ -9,7 +9,8 @@
 "info2":"Көп бөлімді, әр сейсенбі сайын шығады",
 "info3":"Студия MAPPA, автор Тацуки Фудзимото",
 "description":"Экшен, демоны, хоррор, сёнен",
-"note":"Ескертулер жоқ!😊",
+"notebo":"true",
+"note":"",
 "age":"18+",
 "id":"chainsaw-man"
 },
