--- a/server/release.json
+++ b/server/release.json
@@ -25,6 +25,7 @@
 "info3":"Режиссер Бенни Чан",
 "description":"Боевик, криминал",
 "note":"Фильм-ді қытай қазақтары дыбыстаған, дыбыс сапасына мән бермеңіздер.",
+"notebo":"false",
 "age":"18+",
 "id":"story_new_police"
 },
