--- a/server/release.json
+++ b/server/release.json
@@ -10,7 +10,7 @@
 "info3":"Студия MAPPA, автор Тацуки Фудзимото",
 "description":"Экшен, демоны, хоррор, сёнен",
 "notebo":"true",
-"note":"",
+"note":"Ескертулер жоқ!😊",
 "age":"18+",
 "id":"chainsaw-man"
 },
