--- a/server/release.json
+++ b/server/release.json
@@ -10,6 +10,7 @@
 "info3":"Студия Studio Mir, автор Тхэчжун Пак",
 "description":"Экшен, комедия, драма, тылсым күштер",
 "note":"Аниме Netflix-те толығымен 8 бөлім шықты, ал орысша дыбыстамада 3 күн ішінде толығымен шығып қалады!\n\nP.S Аниме дыбыстамасы қазіргі таңда AniStar источник-гінен алынған және бұл тұрақсыз дыбыстама болып табылады, дыбыстама кодик рейтингі бойынша өзгеріп отырады.",
+"age":"16+",
 "id":"lookism"
 },
 {"url":"https://unel-app.github.io/api.unel.tv/web-server/image/Chainsaw-Man.png",
