--- a/server/release.json
+++ b/server/release.json
@@ -1,15 +1,15 @@
 [ {
 "url":"https://pbs.twimg.com/media/Ff43ozRXwAE_URH?format=jpg&name=medium",
 "title":"Лукизм",
-"grade":"1 из 8 эп",
+"grade":8 эп",
 "info":"Хёнсок Пак — непривлекательный старшеклассник, страдающий от избыточного веса, из-за чего регулярно подвергается травле и насмешкам со стороны окружающих. Но происходит чудо...",
 "jp":"Lookism",
 "country":"Оңтүстік Корея, 8 желтоқсан 2022ж",
-"info1":"1 из 12 эп. ~25мин",
-"info2":"Көп бөлімді, шығуда",
+"info1":"8 эп. ~25мин",
+"info2":"Көп бөлімді, шықты",
 "info3":"Студия Studio Mir, автор Тхэчжун Пак",
 "description":"Экшен, комедия, драма, тылсым күштер",
-"note":"Аниме Netflix-те толығымен 8 бөлім шықты, ал орысша дыбыстамада 3 күн ішінде толығымен шығып қалады!\n\nP.S Аниме дыбыстамасы қазіргі таңда AniStar источник-гінен алынған және бұл тұрақсыз дыбыстама болып табылады, дыбыстама кодик рейтингі бойынша өзгеріп отырады.",
+"note":"P.S Аниме дыбыстамасы қазіргі таңда AniStar источник-гінен алынған және бұл тұрақсыз дыбыстама болып табылады, дыбыстама кодик рейтингі бойынша өзгеріп отырады.",
 "age":"16+",
 "id":"lookism"
 },
