--- a/server/release.json
+++ b/server/release.json
@@ -1,7 +1,7 @@
 [ {
 "url":"https://pbs.twimg.com/media/Ff43ozRXwAE_URH?format=jpg&name=medium",
 "title":"Лукизм",
-"grade":8 эп",
+"grade":"8 эп",
 "info":"Хёнсок Пак — непривлекательный старшеклассник, страдающий от избыточного веса, из-за чего регулярно подвергается травле и насмешкам со стороны окружающих. Но происходит чудо...",
 "jp":"Lookism",
 "country":"Оңтүстік Корея, 8 желтоқсан 2022ж",
