--- a/server/release.json
+++ b/server/release.json
@@ -1,5 +1,17 @@
 [ {
-"url":"https://pbs.twimg.com/media/Ff43ozRXwAE_URH?format=jpg&name=medium",
+"url":"https://anixstatic.com/posters/Cs0KXtcTHsjVnSx3F6AK6FzxANXM87.jpg",
+"title":"Ниндзялар уақыты",
+"grade":"10 из 12 эп • 6.9★",
+"info":"История о молодом парне, который стремится стать ниндзя. Молодой человек обладает боевыми навыками, однако этого мало для выживания. Потому, молодой человек вынужден не только совершенствовать свои навыки, но и искать различные возможности в своём городе. Тем более, что на дворе далёкое будущее, где существуют определённые опасности и другие испытания. Главный герой прекрасно понимает, что у него есть потенциал однако для того, чтобы стать самым сильным, требуется хитрость и другие составляющие. Правда, это также открывает путь к приключениям, которых у молодого человека не было.",
+"info1":"10 из 12 эп. ~24мин",
+"info2":"Көп бөлімді, әр сейсенбі сайын шығады",
+"info3":"Студия TROYCA, автор Minato Takano",
+"description":"Экшен, сёнен",
+"note":null",
+"age":"16+",
+"id":"shinobi-no-lttoki"
+},
+{"url":"https://pbs.twimg.com/media/Ff43ozRXwAE_URH?format=jpg&name=medium",
 "title":"Лукизм",
 "grade":"8 эп",
 "info":"Хёнсок Пак — непривлекательный старшеклассник, страдающий от избыточного веса, из-за чего регулярно подвергается травле и насмешкам со стороны окружающих. Но происходит чудо...",
