--- a/server/release.json
+++ b/server/release.json
@@ -9,7 +9,7 @@
 "info2":"Көп бөлімді, әр сейсенбі сайын шығады",
 "info3":"Студия TROYCA, автор Minato Takano",
 "description":"Экшен, сёнен",
-"note":null",
+"note":"Ескертулер жоқ!😊",
 "age":"16+",
 "id":"shinobi-no-lttoki"
 },
