--- a/server/release.json
+++ b/server/release.json
@@ -11,7 +11,7 @@
 "description":"Экшен, сёнен",
 "note":"Ескертулер жоқ!😊",
 "age":"16+",
-"id":"shinobi-no-lttoki"
+"id":"shinobi-no-Ittoki"
 },
 {"url":"https://pbs.twimg.com/media/Ff43ozRXwAE_URH?format=jpg&name=medium",
 "title":"Лукизм",
