--- a/server/release.json
+++ b/server/release.json
@@ -1,5 +1,19 @@
 [ {
-"url":"https://anixstatic.com/posters/Cs0KXtcTHsjVnSx3F6AK6FzxANXM87.jpg",
+"url":"https://anixstatic.com/posters/6pCWUtX8IRiDQbd1NHsKrBQW3P3BzN.jpg",
+"title":"Киберпанк: Бегущие по краю",
+"grade":"10 эп • 7.9★",
+"info":"Найт-Сити — город будущего, оснащённый всевозможными новейшими технологиями. Город, где модификация тела не просто мечты безумных учёных, а реальность сродни обычной покупке. Именно там живёт наш юный герой, для которого этот город не является чем-то невообразимым, он знает всю его настоящую суть, где выживание не просто слово, а истинное лицо этого мира. В один миг, потеряв всё, что имел, парень не опускает рук и в борьбе за выживание становится наёмником по прозвищу Киберпанк.",
+"jp":"Cyberpunk: Edgerunners",
+"country":"Япония, күз 2022ж",
+"info1":"10 эп. ~25мин",
+"info2":"Көп бөлімді, шықты",
+"info3":"Студия Trigger, автор CD PROJEKT RED",
+"description":"киберпанк, фантастика, боевик",
+"note":"Ескертулер жоқ!😊",
+"age":"18+",
+"id":"cyberpunk-edgerunners"
+},
+{"url":"https://anixstatic.com/posters/Cs0KXtcTHsjVnSx3F6AK6FzxANXM87.jpg",
 "title":"Ниндзялар уақыты",
 "grade":"10 из 12 эп • 6.9★",
 "info":"История о молодом парне, который стремится стать ниндзя. Молодой человек обладает боевыми навыками, однако этого мало для выживания. Потому, молодой человек вынужден не только совершенствовать свои навыки, но и искать различные возможности в своём городе. Тем более, что на дворе далёкое будущее, где существуют определённые опасности и другие испытания. Главный герой прекрасно понимает, что у него есть потенциал однако для того, чтобы стать самым сильным, требуется хитрость и другие составляющие. Правда, это также открывает путь к приключениям, которых у молодого человека не было.",
